<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardLL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.wright.paul.allergytravelcardapp.userInterface.CardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/cardTitleTextView"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1.00"
            android:background="#ffffff"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text=""
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/allergyImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/flagImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/cardDividerImageView1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryLight" />

        <TextView
            android:id="@+id/cardBodyTextView"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="1sp"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />


        <LinearLayout
            android:id="@+id/button_LL"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/englishTranslationButton"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="Show\nTranslation"
                android:textColor="@color/card_white"
                android:textSize="14sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/allergyDescription"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="Allergy\nDescription"
                android:textColor="@color/card_white"
                android:textSize="14dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/allergyPicture"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="Allergy\nImage"
                android:textColor="@color/card_white"
                android:textSize="14dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/lock"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="Lock\nCard"
                android:textColor="@color/card_white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ATCTV"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/light_blue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center|center"
                android:text="Eat Safely | Allergy Travel Cards | Android App"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
