...
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:text="Select Allergy"
        android:textColor="@color/colorPrimaryDark" />

    <Spinner
        android:id="@+id/allergySpinner"
        style="@style/spinner_style"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/languageSpinner"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addCardButton"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
...
